[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "botocore-layer"
version = "0.1.0"

[tool.poetry.dependencies]
botocore = "*"
python = "^3.9,<3.10"

[tool.poetry.dev-dependencies]
